add a text style to header text

--- a/viewProjects.html
+++ b/viewProjects.html
@@ -11,6 +11,7 @@
 		  <link rel="stylesheet" href="css/animate.min.css">
 		  <link rel="stylesheet" href="css/font-awesome.min.css">
 		  <link rel="stylesheet" href="css/view.css">
+		 
 					<!-- Modal Style -->
 					<!-- /* The Modal (background) */ -->
 		<style>
@@ -62,12 +63,27 @@
          <section id="team" class="parallax-section" style="background: linear-gradient(to right, #990000,#DC143C,#990000);">
              <div class="container">
                  <div class="row">
-					 <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+					 <!-- <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
                          <div class="wow fadeInUp section-title" data-wow-delay="0.3s" >
 								<h2 >Showcase your creations</h2>
 								<h3 >Join us in our mission to provide project ideas</h3>
                           </div>
-                      </div>
+                      </div> -->
+                      <div class="welcome-table">
+                   <div class="welcome-cell">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
+                                    <div class="welcome-text">
+                                        <h2><span class="bold">Let's</span> Showcase your <span class="bold">creations</span> To Others</h2>
+                                        <p>Join us in our mission to provide project <strong>#IDEAS</strong ></p>
+                                        
+                                    </div>
+                                </div>
+                           </div><!--/.row-->
+                        </div><!--/.container-->
+                    </div>
+                </div>
 					  <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
                          <div class="wow fadeInUp section-title" data-wow-delay="0.3s" >
 								<h2>Software Engineering Projects</h2>
