added bg images

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
         <!--======= WELCOME AREA =======-->
-            <div id="home" class="welcome-area"  data-stellar-background-ratio="0.6" style="background-image: url(assets/images/intro-bg.jpg);">
+            <div id="home" class="welcome-area"  data-stellar-background-ratio="0.6" style="background-image: url(assets/images/2.jpg);">
                <div class="welcome-table">
                    <div class="welcome-cell">
                         <div class="container">
@@ -150,8 +150,8 @@
 
 
         <!--================= ADD A PROJECT SECTION ==============-->
-        <section id="services" class="services-section section-padding">
-            <div class="container">
+        <section id="services" class="services-section section-padding" style="background-image: url(assets/images/1.jpg);">
+            <div class="container" >
                <div class="row">
                    <div class="col-md-12 col-sm-12 col-xs-12 text-center">
                       <div class="section-title">
